Fix UI test input target (#4179)
UI tests should also use final toolkit build artifact instead of :jetbrains-core