@@ -1,6 +1,10 @@
 // Copyright 2021 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 // SPDX-License-Identifier: Apache-2.0
 
+import org.jetbrains.intellij.tasks.DownloadRobotServerPluginTask
+import org.jetbrains.intellij.tasks.RunIdeForUiTestTask
+import org.jetbrains.intellij.utils.OpenedPackages
+import software.aws.toolkits.gradle.ciOnly
 import software.aws.toolkits.gradle.intellij.IdeFlavor
 import software.aws.toolkits.gradle.intellij.IdeVersions
 import software.aws.toolkits.gradle.intellij.ToolkitIntelliJExtension
@@ -16,6 +20,7 @@ val toolkitIntelliJ = project.extensions.create<ToolkitIntelliJExtension>("intel
     ideFlavor.set(IdeFlavor.values().firstOrNull { it.name == runIdeVariant.orNull } ?: IdeFlavor.IC)
 }
 
+val remoteRobotPort: String by project
 val ideProfile = IdeVersions.ideProfile(project)
 
 val toolkitVersion: String by project
@@ -89,5 +94,61 @@ configurations {
         exclude(group = "org.jetbrains.kotlin")
         exclude(group = "org.jetbrains.kotlinx")
         exclude(group = "software.amazon.awssdk", module = "netty-nio-client")
+    }
+}
+
+// Enable coverage for the UI test target IDE
+ciOnly {
+    extensions.getByType<JacocoPluginExtension>().applyTo(tasks.withType<RunIdeForUiTestTask>())
+}
+tasks.withType<DownloadRobotServerPluginTask> {
+    // TODO: https://github.com/gradle/gradle/issues/15383
+    version.set(versionCatalogs.named("libs").findVersion("intellijRemoteRobot").get().requiredVersion)
+}
+tasks.withType<RunIdeForUiTestTask>().all {
+    systemProperty("robot-server.port", remoteRobotPort)
+    // mac magic
+    systemProperty("ide.mac.message.dialogs.as.sheets", "false")
+    systemProperty("jbScreenMenuBar.enabled", "false")
+    systemProperty("apple.laf.useScreenMenuBar", "false")
+    systemProperty("ide.mac.file.chooser.native", "false")
+
+    systemProperty("jb.consents.confirmation.enabled", "false")
+    // This does some magic in EndUserAgreement.java to make it not show the privacy policy
+    systemProperty("jb.privacy.policy.text", "<!--999.999-->")
+    systemProperty("ide.show.tips.on.startup.default.value", false)
+
+    systemProperty("aws.telemetry.skip_prompt", "true")
+    systemProperty("aws.suppress_deprecation_prompt", true)
+    systemProperty("idea.trust.all.projects", "true")
+
+    // These are experiments to enable for UI tests
+    systemProperty("aws.experiment.connectedLocalTerminal", true)
+    systemProperty("aws.experiment.dynamoDb", true)
+
+    debugOptions {
+        enabled.set(true)
+        suspend.set(false)
+    }
+
+    jvmArgs(
+        OpenedPackages + listOf(
+            // very noisy in UI tests
+            "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
+        )
+    )
+
+    ciOnly {
+        configure<JacocoTaskExtension> {
+            // sync with testing-subplugin
+            // don't instrument sdk, icons, etc.
+            includes = listOf("software.aws.toolkits.*")
+            excludes = listOf("software.aws.toolkits.telemetry.*")
+
+            // 221+ uses a custom classloader and jacoco fails to find classes
+            isIncludeNoLocationClasses = true
+
+            output = JacocoTaskExtension.Output.TCP_CLIENT // Dump to our jacoco server instead of to a file
+        }
     }
 }
